<resources>
    <string name="app_name" translatable="false">YAPatch</string>
    <string name="unknown_error">unknown error</string>
    <string name="details">details</string>
    <string name="about">About</string>
    <string name="add">add</string>
    <string name="open">open</string>
    <string name="modules">modules</string>
    <string name="patch">patch</string>
    <string name="install">install</string>
    <string name="save">save</string>
    <string name="refresh">refresh</string>
    <string name="patched">patched</string>
    <string name="choose">choose…</string>
    <string name="signture_bypass">signture bypass</string>
    <string name="select_module">select module</string>
    <string name="new_patch">new patch</string>
    <string name="signature_bypass_l0">lv 0: disabled</string>
    <string name="signature_bypass_l1">lv 1: pm bypass</string>
    <string name="debuggable">debuggable</string>
    <string name="donate">donate</string>
</resources>